[gd_scene load_steps=3 format=3 uid="uid://b4e665eyd4ija"]

[ext_resource type="Script" path="res://Scripts/Location_Scripts/soldier_barracks.gd" id="1_e1saf"]
[ext_resource type="Texture2D" uid="uid://dhovwhb8hplhu" path="res://Assets/Map_Art/Soldier_Barracks/Soldier_Barrack_Morning.png" id="2_jgepg"]

[node name="Soldier_Barracks" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e1saf")

[node name="Day_Text" type="RichTextLabel" parent="."]
z_index = 10
layout_mode = 0
offset_left = 906.0
offset_top = 29.0
offset_right = 1110.0
offset_bottom = 122.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "csdsdvsc"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 150.0
offset_right = 393.0
offset_bottom = 221.0
theme_override_constants/v_separation = 20

[node name="Button" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 45
text = "Talk To Veronica"

[node name="Button2" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 45
text = "Leave"

[node name="Grid2" type="GridContainer" parent="."]
layout_mode = 0
offset_left = -380.0
offset_top = 150.0
offset_right = -24.0
offset_bottom = 312.0
theme_override_constants/v_separation = 20

[node name="Button10" type="Button" parent="Grid2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 45
text = "Talk"

[node name="Button11" type="Button" parent="Grid2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 45
text = "Unavailable"

[node name="Button12" type="Button" parent="Grid2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 45
text = "Back"

[node name="Grid3" type="GridContainer" parent="."]
layout_mode = 0
offset_left = -1166.0
offset_top = 150.0
offset_right = -810.0
offset_bottom = 312.0
theme_override_constants/v_separation = 20

[node name="Button31" type="Button" parent="Grid3"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 45
text = "Friendly"

[node name="Button32" type="Button" parent="Grid3"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 45
text = "Flirt"

[node name="Button33" type="Button" parent="Grid3"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 45
text = "Tell Joke"

[node name="Button34" type="Button" parent="Grid3"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 45
text = "Go Back"

[node name="Bg" type="Sprite2D" parent="."]
z_index = -100
position = Vector2(574, 324)
scale = Vector2(0.904688, 0.936111)
texture = ExtResource("2_jgepg")

[connection signal="button_up" from="GridContainer/Button" to="." method="_on_button_button_up"]
[connection signal="button_up" from="GridContainer/Button2" to="." method="_on_button_2_button_up"]
[connection signal="button_up" from="Grid2/Button10" to="." method="_on_button_10_button_up"]
[connection signal="button_up" from="Grid2/Button11" to="." method="_on_button_11_button_up"]
[connection signal="button_up" from="Grid2/Button12" to="." method="_on_button_12_button_up"]
[connection signal="button_up" from="Grid3/Button31" to="." method="_on_button_31_button_up"]
[connection signal="button_up" from="Grid3/Button32" to="." method="_on_button_32_button_up"]
[connection signal="button_up" from="Grid3/Button33" to="." method="_on_button_33_button_up"]
[connection signal="button_up" from="Grid3/Button34" to="." method="_on_button_34_button_up"]
